[package]
name = "paper-age"
description = "Easy and secure paper backups of secrets"
version = "1.1.0"
edition = "2021"
repository = "https://github.com/matiaskorhonen/paper-age"
authors = ["Matias Korhonen <me@matiaskorhonen.fi>"]
license = "MIT"
categories = ["command-line-utilities", "cryptography"]

[package.metadata.release]
pre-release-commit-message = "Release {{crate_name}} version {{version}}"
tag-message = "Release {{crate_name}} version {{version}}"
sign-tag = true
pre-release-replacements = [
  {file="README.md", search="download/v[0-9\\.-]+/paper-age", replace="download/{{tag_name}}/paper-age", min=3} ,
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/matiaskorhonen/paper-age/compare/{{tag_name}}...HEAD", exactly=1},
]

[dependencies]
age = { version = "0.9.0", features = ["armor", "cli-common"] }
clap = { version = "4.1.8", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
exitcode = "1.1.2"
printpdf = { version = "0.5.3", features = ["svg"] }
qrcode = "0.12.0"
log = "0.4.17"
env_logger = "0.10.0"

[dev-dependencies]
assert_cmd = "2.0.8"
assert_fs = "1.0.10"
predicates = "2.1.5"

[build-dependencies]
clap = { version = "4.1.8", features = ["derive"] }
clap_complete = "4.1.3"
clap-verbosity-flag = "2.0.0"
clap_mangen = { version = "0.2.9" }
path-absolutize = "3.0.14"
printpdf = { version = "0.5.3", features = ["svg"] }
